--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -49,7 +49,14 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
 
       - name: Build with Maven
-        run: chmod +x ./build.sh && ./build.sh
+        run: |
+          branch_name=${{ steps.get_branch.outputs.branch }} 
+          if [[ $branch_name == 'main' || $branch_name == 'master' || $branch_name == 'lineageondemand' ]]
+          then
+              chmod +x ./build.sh && ./build.sh build_without_dashboard
+          else
+              chmod +x ./build.sh && ./build.sh
+          fi
 
       - name: Get branch name
         run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
