--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -10,3 +10,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Dependency Review
         uses: actions/dependency-review-action@v3
+        with:
+        allow-ghsas: GHSA-mjmj-j48q-9wg2
+        
+      
