--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -1,4 +1,4 @@
-name: 'Dependency Review'
+name: "Dependency Review"
 on: [pull_request]
 permissions:
   contents: read
@@ -6,11 +6,9 @@ jobs:
   dependency-review:
     runs-on: ubuntu-latest
     steps:
-      - name: 'Checkout Repository'
+      - name: "Checkout Repository"
         uses: actions/checkout@v3
       - name: Dependency Review
         uses: actions/dependency-review-action@v3
-        with:
-        allow-ghsas: GHSA-mjmj-j48q-9wg2
-        
-      
+				with:
+         allow-ghsas: GHSA-mjmj-j48q-9wg2
