--- a/.github/workflows/scan_dockerfile.yml
+++ b/.github/workflows/scan_dockerfile.yml
@@ -1,4 +1,4 @@
-name: build
+name: Scanning Dockerfile
 on: [pull_request]
 
 jobs:
@@ -18,7 +18,7 @@ jobs:
           output: 'trivy-results.sarif'
           exit-code: '1'
           ignore-unfixed: true
-          severity: 'UNKNOWN,LOW,MEDIUM,HIGH,CRITICAL'
+          severity: 'MEDIUM,HIGH,CRITICAL'
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v2
