--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -130,6 +130,7 @@
         <dependency>
             <groupId>org.apache.atlas</groupId>
             <artifactId>atlas-notification</artifactId>
+            <version>${project.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.yammer.metrics</groupId>
