--- a/.github/workflows/wiz-image-scanning.yml
+++ b/.github/workflows/wiz-image-scanning.yml
@@ -27,7 +27,9 @@ jobs:
       SCAN_PATH: "." # Set the relative path in the repo to build the image from
       TAG: "docker-tag" # Set the tag to use for the image
       POLICY: "Default vulnerabilities policy" # Set the desired Wiz-cli policy to use
-
+    defaults:
+      run:
+        shell: bash
     steps:
       - uses: actions/checkout@v2
 
@@ -67,6 +69,10 @@ jobs:
           registry: ghcr.io
           username: $GITHUB_ACTOR
           password: ${{ secrets.my_pat }}
+          
+      - name: Build the Docker image
+        run: cd $SCAN_PATH && docker build . --tag $TAG # Configure to fit the params you use to build your image
+        
       - name: Download Wiz-cli
         run: curl -o wizcli https://wizcli.app.wiz.io/wizcli && chmod +x wizcli
 
