--- a/.github/workflows/wiz-image-scanning.yml
+++ b/.github/workflows/wiz-image-scanning.yml
@@ -1,38 +1,112 @@
-name: 'wiz-cli'
+#
+# Licensed to the Apache Software Foundation (ASF) under one
+# or more contributor license agreements.  See the NOTICE file
+# distributed with this work for additional information
+# regarding copyright ownership.  The ASF licenses this file
+# to you under the Apache License, Version 2.0 (the
+# "License"); you may not use this file except in compliance
+# with the License.  You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0 
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+
+name: Java CI with Maven
+
 on: [pull_request]
 
 jobs:
-  wiz-cli-image-scan:
-    name: 'Wiz-cli Image Scan'
+  build:
     runs-on: ubuntu-latest
     env:
       SCAN_PATH: "." # Set the relative path in the repo to build the image from
       TAG: "docker-tag" # Set the tag to use for the image
       POLICY: "Default vulnerabilities policy" # Set the desired Wiz-cli policy to use
 
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
-    defaults:
-      run:
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
+      - name: Cache Maven packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/build.sh') }}
+          restore-keys: ${{ runner.os }}-m2
+
+      - name: Build with Maven
+        run: chmod +x ./build.sh && ./build.sh
+
+      - name: Get branch name
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        id: get_branch
+
+      - run: echo "REPOSITORY_NAME=`echo "$GITHUB_REPOSITORY" | awk -F / '{print $2}' | sed -e "s/:refs//"`" >> $GITHUB_ENV
         shell: bash
 
-    steps:
-    # Checkout the repository to the GitHub Actions runner
-    - name: Check out repository
-      uses: actions/checkout@v2
+      - name: Get version tag
+        run: echo "##[set-output name=version;]$(echo `git ls-remote https://${{ secrets.my_pat }}@github.com/atlanhq/${REPOSITORY_NAME}.git ${{ steps.get_branch.outputs.branch }} | awk '{ print $1}' | cut -c1-7`)abcd"
+        id: get_version
 
-    # It's possible to skip this step if this job is sceduled after an image-build job.
-    # If that's the case, also set "Run wiz-cli docker image scan" step accordingly
-    - name: Build the Docker image
-      run: cd $SCAN_PATH && docker build . --tag $TAG # Configure to fit the params you use to build your image
+      - name: Set up Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
 
-    - name: Download Wiz-cli
-      run: curl -o wizcli https://wizcli.app.wiz.io/wizcli && chmod +x wizcli
+      - name: Login to GitHub Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: $GITHUB_ACTOR
+          password: ${{ secrets.my_pat }}
+      - name: Download Wiz-cli
+        run: curl -o wizcli https://wizcli.app.wiz.io/wizcli && chmod +x wizcli
 
-    - name: Authenticate to Wiz
-      run: ./wizcli auth --id "$WIZ_CLIENT_ID" --secret "$WIZ_CLIENT_SECRET"
-      env:
-        WIZ_CLIENT_ID: ${{ secrets.WIZ_CLIENT_ID }}
-        WIZ_CLIENT_SECRET: ${{ secrets.WIZ_CLIENT_SECRET }}
+      - name: Authenticate to Wiz
+        run: ./wizcli auth --id "$WIZ_CLIENT_ID" --secret "$WIZ_CLIENT_SECRET"
+        env:
+          WIZ_CLIENT_ID: ${{ secrets.WIZ_CLIENT_ID }}
+          WIZ_CLIENT_SECRET: ${{ secrets.WIZ_CLIENT_SECRET }}
 
-    - name: Run wiz-cli docker image scan
-      run: ./wizcli docker scan --image $TAG --policy "$POLICY"
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          run: ./wizcli docker scan --image latest --policy "$POLICY"
+          tags: |
+            ghcr.io/atlanhq/${{ github.event.repository.name }}-${{ steps.get_branch.outputs.branch }}:latest
+            ghcr.io/atlanhq/${{ github.event.repository.name }}-${{ steps.get_branch.outputs.branch }}:${{ steps.get_version.outputs.version }}
+
+      - name: Check out into atlan repo
+        uses: actions/checkout@v2
+        with:
+          ref: main
+          repository: atlanhq/atlan
+          token: ${{ secrets.my_pat }}
+
+      - name: Add Changelog
+        run: |
+          mkdir -p gitlog
+          echo "- ${{ github.event.head_commit.message }}">>gitlog/${{ github.event.repository.name }}.txt
+          chmod +x ./scripts/create_changelog.sh
+          ./scripts/create_changelog.sh
+
+      - name: Commit changes
+        uses: EndBug/add-and-commit@v7
+        with:
+          branch: main
+          author_name: atlan-ci
+          author_email: it@atlan.com
+          message: "${{ github.event.repository.name }}"
+          default_author: user_info
+          push: origin main
