--- a/.github/workflows/wiz-image-scanning.yml
+++ b/.github/workflows/wiz-image-scanning.yml
@@ -68,7 +68,7 @@ jobs:
       - name: Scan the Image For Vulnerabilities
         id: docker_scan
         run: >-
-          ./wizcli docker scan ghcr.io/atlanhq/${{ github.event.repository.name
+          ./wizcli docker scan --image ghcr.io/atlanhq/${{ github.event.repository.name
           }}-${{ steps.get_branch.outputs.branch }}:latest --policy "$POLICY"
       - name: Check out into atlan repo
         uses: actions/checkout@v2
