--- a/.github/workflows/wiz-image-scanning.yml
+++ b/.github/workflows/wiz-image-scanning.yml
@@ -1,91 +1,123 @@
+#
+# Licensed to the Apache Software Foundation (ASF) under one
+# or more contributor license agreements.  See the NOTICE file
+# distributed with this work for additional information
+# regarding copyright ownership.  The ASF licenses this file
+# to you under the Apache License, Version 2.0 (the
+# "License"); you may not use this file except in compliance
+# with the License.  You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+
 name: Java CI with Maven
-'on':
-  - pull_request
+
+on:
+  push:
+    branches:
+      - alpha
+      - beta
+      - development
+      - master
+      - lineageondemand
+
 jobs:
   build:
+
     runs-on: ubuntu-latest
-    env:
-      SCAN_PATH: .
-      TAG: docker-tag
-      POLICY: Default vulnerabilities policy
+
     steps:
       - uses: actions/checkout@v2
+      
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
           path: ~/.m2
-          key: '${{ runner.os }}-m2-${{ hashFiles(''**/build.sh'') }}'
-          restore-keys: '${{ runner.os }}-m2'
-      - name: Build with Maven
-        run: chmod +x ./build.sh && ./build.sh
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/build.sh') }}
+          restore-keys: ${{ runner.os }}-m2
+
       - name: Get branch name
-        run: 'echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"'
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
         id: get_branch
-      - run: >-
-          echo "REPOSITORY_NAME=`echo "$GITHUB_REPOSITORY" | awk -F / '{print
-          $2}' | sed -e "s/:refs//"`" >> $GITHUB_ENV
+
+      - name: Build with Maven
+        run: |
+          branch_name=${{ steps.get_branch.outputs.branch }} 
+          if [[ $branch_name == 'main' || $branch_name == 'master' || $branch_name == 'lineageondemand' ]]
+          then
+              echo "build without dashboard"
+              chmod +x ./build.sh && ./build.sh build_without_dashboard
+          else
+              echo "build with dashboard"
+              chmod +x ./build.sh && ./build.sh
+          fi
+
+      - run:   echo "REPOSITORY_NAME=`echo "$GITHUB_REPOSITORY" | awk -F / '{print $2}' | sed -e "s/:refs//"`" >> $GITHUB_ENV
         shell: bash
+
       - name: Get version tag
-        run: >-
-          echo "##[set-output name=version;]$(echo `git ls-remote https://${{
-          secrets.my_pat }}@github.com/atlanhq/${REPOSITORY_NAME}.git ${{
-          steps.get_branch.outputs.branch }} | awk '{ print $1}' | cut
-          -c1-7`)abcd"
+        run: echo "##[set-output name=version;]$(echo `git ls-remote https://${{ secrets.my_pat }}@github.com/atlanhq/${REPOSITORY_NAME}.git ${{ steps.get_branch.outputs.branch }} | awk '{ print $1}' | cut -c1-7`)abcd"
         id: get_version
-      - name: Set up Buildx
+
+      - name: Set up Buildx 
         id: buildx
         uses: docker/setup-buildx-action@v1
+
       - name: Login to GitHub Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v1 
         with:
           registry: ghcr.io
           username: $GITHUB_ACTOR
-          password: '${{ secrets.my_pat }}'
+          password: ${{ secrets.my_pat }}
+      
       - name: Download Wiz-cli
         run: 'curl -o wizcli https://wizcli.app.wiz.io/wizcli && chmod +x wizcli'
+      
       - name: Authenticate to Wiz
         run: ./wizcli auth --id "$WIZ_CLIENT_ID" --secret "$WIZ_CLIENT_SECRET"
         env:
           WIZ_CLIENT_ID: '${{ secrets.WIZ_CLIENT_ID }}'
           WIZ_CLIENT_SECRET: '${{ secrets.WIZ_CLIENT_SECRET }}'
+
       - name: Build Image
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile
-          tags: >
-            ghcr.io/atlanhq/${{ github.event.repository.name }}-${{
-            steps.get_branch.outputs.branch }}:latest
+          tags: |
+            ghcr.io/atlanhq/${{ github.event.repository.name }}-${{ steps.get_branch.outputs.branch }}:latest
+            ghcr.io/atlanhq/${{ github.event.repository.name }}-${{ steps.get_branch.outputs.branch }}:${{ steps.get_version.outputs.version }}
 
-            ghcr.io/atlanhq/${{ github.event.repository.name }}-${{
-            steps.get_branch.outputs.branch }}:${{
-            steps.get_version.outputs.version }}
       - name: Scan the Image For Vulnerabilities
         id: docker_scan
-        run: >-
-          ./wizcli docker scan --image ghcr.io/atlanhq/${{ github.event.repository.name
-          }}-${{ steps.get_branch.outputs.branch }}:latest --policy "$POLICY"
+        run: ./wizcli docker scan --image --policy "$POLICY"
+
       - name: Check out into atlan repo
         uses: actions/checkout@v2
         with:
           ref: main
           repository: atlanhq/atlan
-          token: '${{ secrets.my_pat }}'
+          token: ${{ secrets.my_pat }}
+
       - name: Add Changelog
-        run: >
+        run: |
           mkdir -p gitlog
-
-          echo "- ${{ github.event.head_commit.message }}">>gitlog/${{
-          github.event.repository.name }}.txt
-
+          echo "- ${{ github.event.head_commit.message }}">>gitlog/${{ github.event.repository.name }}.txt
           chmod +x ./scripts/create_changelog.sh
-
           ./scripts/create_changelog.sh
+
       - name: Commit changes
         uses: EndBug/add-and-commit@v7
         with:
