--- a/.github/workflows/wiz-image-scanning.yml
+++ b/.github/workflows/wiz-image-scanning.yml
@@ -102,7 +102,7 @@ jobs:
 
       - name: Scan the Image For Vulnerabilities
         id: docker_scan
-        run: ./wizcli docker scan --image --policy "$POLICY"
+        run: ./wizcli docker scan --image ghcr.io/atlanhq/${{ github.event.repository.name }}-${{ steps.get_branch.outputs.branch }} $TAG ${{ steps.get_version.outputs.version }} --policy "$POLICY"
 
       - name: Check out into atlan repo
         uses: actions/checkout@v2
