--- a/.github/workflows/trivy-image-scan.yml
+++ b/.github/workflows/trivy-image-scan.yml
@@ -91,7 +91,7 @@ jobs:
       - name: Scan Image
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ghcr.io/atlanhq/${{ github.event.repository.name }}-${{ steps.get_branch.outputs.branch }}:${{ steps.get_version.outputs.version }}
+          image-ref: ghcr.io/atlanhq/atlas-metastore-development:${{ steps.get_version.outputs.version }}
           format: 'sarif'
           output: 'trivy-results.sarif'
 
