--- a/.github/workflows/trivy-image-scan.yml
+++ b/.github/workflows/trivy-image-scan.yml
@@ -91,10 +91,17 @@ jobs:
       - name: Scan Image
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ubuntu:23.04
+          image-ref: ubuntu:18.04
+          vuln-type: 'os,library'
+          exit-code: '1'
           format: 'sarif'
           output: 'trivy-results.sarif'
 
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v2.1.33
+        with:
+          sarif_file: 'trivy-results.sarif'
+      
       - name: Check out into atlan repo
         uses: actions/checkout@v2
         with:
