--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -103,7 +103,7 @@ jobs:
 
       - name: Scan the Image For Vulnerabilities
         id: docker_scan
-        run: ./wizcli docker scan --image ghcr.io/atlanhq/${{ github.event.repository.name }}-${{ steps.get_branch.outputs.branch }} --policy "$POLICY"
+        run: ./wizcli docker scan --image ghcr.io/atlanhq/${{ github.event.repository.name }}-development:latest --policy "$POLICY"
 
       - name: Check out into atlan repo
         uses: actions/checkout@v2
