--- a/.github/workflows/trivy-docker-scan.yml
+++ b/.github/workflows/trivy-docker-scan.yml
@@ -20,7 +20,7 @@ jobs:
           scan-type: 'config'
           scan-ref: './Dockerfile'
           hide-progress: false
-          format: 'sarif'
+          format: 'table'
           #output: ''
           output: 'trivy-results-docker.sarif'
           exit-code: '0'
@@ -31,3 +31,12 @@ jobs:
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: 'trivy-results-docker.sarif'
+      
+      - name: Create Issues Summary
+        run: |
+          summary=$(jq '.[] | select(.Vulnerabilities) | .Vulnerabilities | group_by(.Severity) | map({Severity: .[0].Severity, Count: length}) | tostring' results.json | tr -d \\)
+          if [ -z $summary ]
+          then
+            summary="0 Issues"
+          fi
+          echo "SUMMARY=$summary" >> $GITHUB_ENV
