--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,6 +31,10 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+        registry: ghcr.io
+        username: $GITHUB_ACTOR
+        password: ${{ secrets.my_pat }}
 
     steps:
       - uses: actions/checkout@v2
