--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -68,3 +68,4 @@ jobs:
       uses: github/codeql-action/analyze@v2
       with:
         category: "/language:${{matrix.language}}"
+        exit-code: 1
