--- a/auth-agents-common/pom.xml
+++ b/auth-agents-common/pom.xml
@@ -37,6 +37,12 @@
 
         <dependency>
             <groupId>org.apache.atlas</groupId>
+            <artifactId>atlas-server-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.atlas</groupId>
             <artifactId>client-keycloak</artifactId>
             <version>${project.version}</version>
         </dependency>
