--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -106,7 +106,7 @@ jobs:
       - name: Check out into atlan repo
         uses: actions/checkout@v2
         with:
-          ref: main
+          ref: ${{ steps.get_branch.outputs.branch }}
           repository: atlanhq/atlan
           token: ${{ secrets.my_pat }}
 
