include janusoptimisation-1.0.0 in ecr build push

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,7 +27,7 @@ on:
       - master
       - lineageondemand
       - janusoptimisation
-      - janusoptimisation-multiQuery-1.0.0
+      - janusoptimisation-1.0.0
 
 jobs:
   build:
