--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,6 +40,9 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.11
+
+      - name: Print JDK version
+        run: java -version
       
       - name: Cache Maven packages
         uses: actions/cache@v2
