--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,6 +26,7 @@ on:
       - development
       - master
       - dg1908
+      - revert3773dg1924
 
 jobs:
   build:
@@ -64,7 +65,7 @@ jobs:
       - name: Build with Maven
         run: |
           branch_name=${{ steps.get_branch.outputs.branch }} 
-          if [[ $branch_name == 'main' || $branch_name == 'master' || $branch_name == 'dg1908' ]]
+          if [[ $branch_name == 'main' || $branch_name == 'master' || $branch_name == 'revert3773dg1924' ]]
           then
               echo "build without dashboard"
               chmod +x ./build.sh && ./build.sh build_without_dashboard
